github action with sonarqube

--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "jest-express": "^1.6.0",
+    "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^7.3.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "sonarqube-scanner": "^3.5.0"
   }
 }
