--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,6 @@ jobs:
         ref: ${{ github.ref }}
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      with:
+        host: ${{ secrets.SONAR_TOKEN }}
+        login: ${{ secrets.SONAR_HOST_URL }}
