--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,25 @@
-on: push
-name: Main Workflow
+on:
+  # Trigger analysis when pushing in master or pull requests, and when creating
+  # a pull request. 
+  push:
+    branches:
+      - master
+  pull_request:
+      types: [opened, synchronize, reopened]
+
+name: SonarQube Scan
 jobs:
-  sonarQubeTrigger:
+  sonarqube:
+    name: SonarQube Trigger
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: Checking out
+      uses: actions/checkout@master
       with:
-        ref: ${{ github.ref }}
+        # Disabling shallow clone is recommended for improving relevancy of reporting
+        fetch-depth: 0
     - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
+      uses: kitabisa/sonarqube-action@v1.2.0
       with:
-        host: ${{ secrets.SONAR_TOKEN }}
-        login: ${{ secrets.SONAR_HOST_URL }}
+        host: ${{ secrets.SONARQUBE_HOST }}
+        login: ${{ secrets.SONARQUBE_TOKEN }}
